--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate": "^1.0.0",
+    "animate.css": "^4.1.0",
     "bootstrap": "^4.5.0",
     "filepond": "^4.18.0",
     "filepond-plugin-image-exif-orientation": "^1.0.9",
@@ -10,13 +12,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
+    "react-notifications-component": "^2.4.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.5"
   },
-  "proxy": "http://localhost:9001/",
+  "proxy": "http://127.0.0.1:9001/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
